# qt-creator-nomo-icontheme

./: CMakeLists.txt  LICENSE  NomoIconTheme.json.in  README.md  icontheme.qrc  nomoicontheme.json.in  plugin.cpp  plugin.h
.github/workflows/: build_cmake.yml
